expected/main/gens/primStructSelectA-neg-32.err
ERROR: "actual/main/gens/primStructSelectA-neg-32.lc", line 9
external selectP2 {primStructSelect Word "p" SW} :: Ref S -> ProxyLab "p" -> Ref SW
         ^
Generator argument 1 (Word) does not have expected kind (area)

ERROR: "actual/main/gens/primStructSelectA-neg-32.lc", line 8
entrypoint selectP2
^
"selectP2" is not in scope

ERROR: Aborting after 2 previously reported errors

